Styling and scrollbar fixes

--- a/ticker/static/css/style.css
+++ b/ticker/static/css/style.css
@@ -1,8 +1,5 @@
 html {
     scroll-behavior: smooth;
-}
-
-body {
     background-color: black;
 }
 
@@ -12,4 +9,14 @@ body {
 
 .scroll-container {
     padding-top: 1rem;
+}
+
+/* Webkit scrollbar hiding */
+
+::-webkit-scrollbar {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.3);
 }
